# jinmao

./: .env  .gitignore  Dockerfile  README.md  agent.molook.cn.key  agent.molook.cn.pem  config.yml  docker-entrypoint.sh  meetings-0704.json  meetings.json  meetings_celine.json  meetings_chanel.json  meetings_miumiu.json  productDetails_ppr5008444125.json  products_pyjamas.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 04e93b6e5ac9_new_database_structure.py  04f76a6770d0_add_review_analysis_field.py  0a53a742917b_set_modify_product_released_at_field_.py  14c099e4366b_update_category_field.py  242e921e8150_add_attributes_raw_field_for_data_clear.py  2e8b8aed7d1f_set_default_value_for_review_analysis_.py  34d571eab0e3_add_index.py  3b75db0c93a3_add_parent_category_field.py  3d99fc41bf58_add_extra_metrics_on_product_table.py  42a3b930624f_add_review_photos_outer_field.py  4664a5810f38_add_extra_metric_table_and_version_.py  4b57a52dfd24_add_color_field_on_product_table.py  4bc0d2c3e6de_init.py  5fd5d14ef112_add_lot_id_field.py  6e41f206af93_add_review_analysis_metrics.py  72798eb45c32_init_0616.py  75075cd4f9b4_sku_add_attributes_field.py  790118e56535_init.py  7a001cf0ec32_add_create_time_inner_update_time_inner_.py  838002dbc57c_add_is_review_analyzed_field_on_product_.py  9640cb3e21d0_add_extra_metric_name_index.py  97332937f225_add_modify_product_review_summary_data_.py  988c20a2a217_add_review_photos_field.py  9c06a57edd1c_delete_source_id_in_product_sku.py  9cb88027b4d3_set_default_value_for_language_code.py  bd9406e59c10_add_model_images_field.py  c89ac7d6a384_add_unique_consgtraint_for_table.py  cf2a0230a5c4_add_outer_image_fields_and_modify_filed_.py  d5ccb594979c_update_product_review_index.py  e35ae6893607_add_index_on_product_released_at.py  ebf97b482882_add_main_category_filed_on_product_.py  f20588986f06_add_product_and_product_sku_index.py  fe9ca2204b11_delete_helpful_socre_in_product_review.py  fea1dd86bb9c_add_extra_review_analyses_field_on_.py
api/: doubao.py  doubao_v2.py  doubao_v3.py  main.py  schemas.py
backups/: alembic_version.sql  product.sql  product_review.sql  product_sku.sql
crawler/: __init__.py  config.py  db.py  deps.py  models.py  models_bak.py  store.py  utils.py
crawler/jinmao/: README.md  schemas.py
crawler/redis_utils/: bulk_delete_keys.py  bulk_rename_keys.py  delete_status_by_id.py  get_redis_counts.py  reset_redis_key.py
docs/: 0606金茂问题记录.md  next-pyjamas检索方法.md  release_note.md  代理池.md  任务列表.md  技术原理.md  金茂项目进度记录.md  需求记录.md  非固定字段.md
examples/: gpt4o_example.py  openai_example.com.py  截图.py  获取款式数量.py
jinmao_api/: README.md  __init__.py  comment.json  comments.json  database_transfer.py  database_transfer_product_detail.py  database_transfer_review.py  database_transfer_review_async.py  database_transfer_sku.py  database_transfer_sku_sku_table_update.py  doubao.py  doubao_v2.py  doubao_v3.py  image_util.py  main.py  schemas.py  tags_util.py  translate.py  utils.py
jinmao_sql/: jinmao.sql  temp.sql
projects/gap/: README.md  attribute_filter.py  attribute_filter_async.py  category-example.json  gap.py  gap_category.py  gap_category_bulk.py  gap_index.py  gap_search.py  gap_single.py  gap_sku.py  process_image.py  product-sku-example.json  (+7 more)
review_ana/: doubao ana.py  doubao_lite_ana.py  doubao_pro_ana.py  doubao_pro_summary.py  doubao_pro_summary_v2.py  haiku ana.py  haiku_ana.py  predicted_scores.json  reviews500.json
scripts/: FILA-Jinglin.py  demo.py  taobao_tmall_0514.py  template.py  txt2redis.py  voc.py  巨量ip.py  快代理ip测试.py  淘宝&天猫_Debug.py  金茂.sql
templates/: gap1.py  gap3.py  next1.py  scraper1.py  test_scraper2.py
tests/: conftest.py  test_db.py  test_parse_url.py
(+72 files in other folders)
