[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["wwfyde <wwfyde@163.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.20.0"
lxml = "^5.2.2"
pandas = "^2.2.2"
requests = "^2.31.0"
playwright = "^1.43.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
