[tool.poetry]
name = "crawler"
version = "0.1.1"
description = ""
authors = ["wwfyde <wwfyde@163.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.20.0"
lxml = "^5.2.2"
pandas = "^2.2.2"
requests = "^2.31.0"
playwright = "^1.43.0"
pytest-playwright = "^0.5.0"
aiohttp = "^3.9.5"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.1"
fastapi = { extras = ["all"], version = "^0.111.0" }
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.31" }
psycopg = { extras = ["binary", "pool"], version = "^3.1.19" }
redis = "^5.0.4"
httpx = { extras = ["http2", "socks"], version = "^0.27.0" }
structlog = "^24.2.0"
python-benedict = "^0.33.2"
oss2 = "^2.18.5"
anthropic = { extras = ["bedrock"], version = "^0.28.0" }
alembic = "^1.13.1"
openai = "^1.34.0"
mysqlclient = "^2.2.4"
aiomysql = "^0.2.0"
pillow = "^10.3.0"
jinja2 = "^3.1.4"
tiktoken = "^0.7.0"
tokenizers = "^0.19.1"
python-dateutil = "^2.9.0.post0"
fake-useragent = "^1.5.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
notebook = "^7.1.3"


[tool.poetry.group.jinmao.dependencies]
fastapi = { extras = ["all"], version = "^0.111.0" }
tiktoken = "^0.7.0"
oss2 = "^2.18.6"
sqlalchemy = "^2.0.31"
mysqlclient = "^2.2.4"
jinja2 = "^3.1.4"
openai = "^1.35.7"
aiomysql = "^0.2.0"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
extend-ignore = ["E501"]
